# ft_printf

./: .gitignore  CMakeLists.txt  Makefile  ft_print_hex.c  ft_print_unsigned.c  ft_printf.c  ft_printf.h  ft_printf_utils1.c
include/: ft_printf.h
lib/libft/: Makefile  ft_itoa.c  ft_str1.c  ft_str2.c  libft.h
src/: ft_print_hex.c  ft_print_unsigned.c  ft_printf.c  ft_printf_utils2.c  main.c
tests/: main.c
